--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 Changes
 -------
 
+0.1.3 (2015-XX-XX)
+^^^^^^^^^^^^^^^^^^
+* Documentation published on http://aiogibson.readthedocs.org/:
+
+* Added wait closed finalizer;
+
+* Improved test coverage to 99%;
+
+* Fixed bug with canceled future;
+
 
 0.1.2 (2014-10-15)
 ^^^^^^^^^^^^^^^^^^
