--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Changes
 -------
 
-0.1.3 (2015-XX-XX)
+0.1.3 (2015-02-10)
 ^^^^^^^^^^^^^^^^^^
 * Documentation published on http://aiogibson.readthedocs.org/:
 
@@ -11,6 +11,7 @@ Changes
 
 * Fixed bug with canceled future;
 
+* Added limit argument to mget command;
 
 0.1.2 (2014-10-15)
 ^^^^^^^^^^^^^^^^^^
